test: add echo ssh key

--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -11,6 +11,9 @@ jobs:
     env:
       SSH_KEY: ${{ secrets.SSH_KEY }}
     steps:
+      - name: Check env
+        if: ${{ env.SSH_KEY == '' }}
+        run: 'echo "echo the secret \"SSH_KEY\" has not been made; echo please go to \"settings \> secrets \> actions\" to create it'
       - uses: actions/checkout@v3
       - name: Use Node.js
         uses: actions/setup-node@v3
@@ -18,7 +21,7 @@ jobs:
           node-version: '18.x'
       - run: mkdir ~/.ssh
       - run: echo "$SSH_KEY" >> ~/.ssh/github-action
-      - run: chmod 700 ~/.ssh && chmod 600 ~/.ssh/github-action && echo "$SSH_KEY"
+      - run: chmod 700 ~/.ssh && chmod 600 ~/.ssh/github-action
       - run: echo -e "Host vps\n\tUser kajur-app\n\tHostname 103.127.96.31\n\tPubKeyAuthentication yes\n\tIdentityFile ~/.ssh/github-action\n\tStrictHostKeyChecking No\n\tAddKeysToAgent yes" >> ~/.ssh/config
       - name: "[RUNNER] Copy new file"
         run: rsync -ae ssh ./ vps:/home/kajur-app/hf-emotion-detection-api/
