--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -11,16 +11,13 @@ jobs:
     env:
       SSH_KEY: ${{ secrets.SSH_KEY }}
     steps:
-      - name: Check env
-        if: ${{ env.SSH_KEY == '' }}
-        run: 'echo "echo the secret \"SSH_KEY\" has not been made; echo please go to \"settings \> secrets \> actions\" to create it"'
       - uses: actions/checkout@v3
       - name: Use Node.js
         uses: actions/setup-node@v3
         with:
           node-version: '18.x'
       - run: mkdir ~/.ssh
-      - run: echo "$SSH_KEY" >> ~/.ssh/github-action
+      - run: echo "$SSH_KEY" >> ~/.ssh/github-action.pub
       - run: chmod 600 ~/.ssh/github-action
       - run: echo -e "Host vps\n\tUser kajur-app\n\tHostname 103.127.96.31\n\tIdentityFile ~/.ssh/github-action\n\tStrictHostKeyChecking No\n\t" >> ~/.ssh/config
       - name: "[RUNNER] Copy new file"
