--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -25,6 +25,6 @@ jobs:
       - name: "[RUNNER] Go to directory"
         run: ssh vps "cd /home/kajur-app/hf-emotion-detection-api/"
       - name: "[RUNNER] Install dependencies"
-        run: ssh vps "npm install --omit=dev"
+        run: ssh vps "source ~/.nvm/nvm.sh && npm install --omit=dev"
       - name: "[SERVER] Restart app"
         run: ssh vps "source ~/.nvm/nvm.sh && pm2 restart ${{ secrets.APP_NAME }}"
