--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -22,9 +22,7 @@ jobs:
       - run: echo -e "Host vps\n\tUser kajur-app\n\tHostname 103.127.96.31\n\tIdentityFile ~/.ssh/github-action\n\tStrictHostKeyChecking No\n\t" >> ~/.ssh/config
       - name: "[RUNNER] Copy new file"
         run: rsync -ae ssh ./ vps:/home/kajur-app/hf-emotion-detection-api/
-      - name: "[RUNNER] Go to directory"
-        run: ssh vps "cd /home/kajur-app/hf-emotion-detection-api/"
       - name: "[RUNNER] Install dependencies"
-        run: ssh vps "source ~/.nvm/nvm.sh && npm install --omit=dev"
+        run: ssh vps "cd /home/kajur-app/hf-emotion-detection-api/ && source ~/.nvm/nvm.sh && npm install --omit=dev"
       - name: "[SERVER] Restart app"
         run: ssh vps "source ~/.nvm/nvm.sh && pm2 restart ${{ secrets.APP_NAME }}"
