fix: client loop

--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -20,9 +20,9 @@ jobs:
       - run: echo "$SSH_KEY" >> ~/.ssh/github-action
       - run: chmod 600 ~/.ssh/github-action
       - run: echo -e "Host vps\n\tUser kajur-app\n\tHostname 103.127.96.31\n\tIdentityFile ~/.ssh/github-action\n\tStrictHostKeyChecking No\n\t" >> ~/.ssh/config
-      - name: "[RUNNER] Copy new file"
-        run: rsync -ae ssh ./ vps:/home/kajur-app/hf-emotion-detection-api/
       - name: "[RUNNER] Install dependencies"
-        run: ssh vps "cd /home/kajur-app/hf-emotion-detection-api/ && source ~/.nvm/nvm.sh && npm install --omit=dev"
+        run: npm install --omit=dev
+      - name: "[RUNNER] Copy all file"
+        run: rsync -ae ssh ./ vps:/home/kajur-app/hf-emotion-detection-api/
       - name: "[SERVER] Restart app"
         run: ssh vps "source ~/.nvm/nvm.sh && pm2 restart ${{ secrets.APP_NAME }}"
